/*
 * Copyright 2024 hopeio. All rights reserved.
 * Licensed under the MIT License that can be found in the LICENSE file.
 * @Created by jyb
 */

syntax = "proto3";
package enum;

import "hopeio/utils/patch/go.proto";
import "hopeio/time/timestamp/timestamp.proto";
import "hopeio/time/deletedAt/deletedAt.proto";
import "protoc-gen-openapiv2/options/annotations.proto";



option java_package = "xyz.hoper.protobuf.model.enum";
option java_multiple_files = true;
option go_package = "github.com/hopeio/protobuf/model/enum";

message Enum{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  string name = 2 [(go.field) = {tags:'comment:"名称'}];
  uint64 group = 3 [(go.field) = {tags:'gorm:"size:20"'}];
  uint32 type = 6 [(go.field) = {tags:'comment:"类型"'}];
  timestamp.Timestamp createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  timestamp.Timestamp updatedAt = 26 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 28 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}


message EnumValue{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 enumId = 2 [(go.field) = {tags:'comment:"枚举id'}];
  uint64 index = 3 [(go.field) = {tags:'gorm:"comment:index"'}];
  string value = 5 [(go.field) = {tags:'comment:"值"'}];
  timestamp.Timestamp createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  timestamp.Timestamp updatedAt = 26 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 28 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}