/*
 * Copyright 2024 hopeio. All rights reserved.
 * Licensed under the MIT License that can be found in the LICENSE file.
 * @Created by jyb
 */

syntax = "proto2";
package enum;

import "google/protobuf/descriptor.proto";

option java_package = "xyz.hoper.protobuf.utils.enums";
option java_outer_classname = "EnumProtos";
option go_package = "github.com/hopeio/protobuf/utils/enum";

extend google.protobuf.EnumOptions {
  //自定义类型
  optional string customtype = 62025;

  optional bool no_genvaluemap = 62026;
  //不用手动标序号，= iota
  optional bool numorder = 62027;
  //生成JsonMarshal
  optional bool jsonmarshal = 62028;

  //是errcode
  optional bool errcode = 62029;

  optional bool gqlgen = 62030;

  optional bool no_prefix = 62031;

  optional bool stringer = 62033;

  optional bool  no_extgen = 62032;

  optional bool textmarshal = 62034;
}

extend google.protobuf.EnumValueOptions {
  optional string text = 66002;
}


extend google.protobuf.FileOptions {
  optional bool gqlgen_all = 1001;
  optional bool jsonmarshal_all = 1003;
  optional bool textmarshal_all = 1004;
  optional bool no_prefix_all = 1002;
  optional bool no_extgen_all = 1005;
}
